--- a/project_2_recommender_and_evaluation.ipynb
+++ b/project_2_recommender_and_evaluation.ipynb
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "unlike-recipient",
    "metadata": {},
    "outputs": [],
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "greatest-canon",
    "metadata": {},
    "outputs": [
@@ -980,7 +980,20 @@
      "text": [
       "epoch 0\n",
       "epoch 1\n",
-      "epoch 2\n"
+      "epoch 2\n",
+      "epoch 3\n",
+      "epoch 4\n",
+      "epoch 5\n",
+      "epoch 6\n",
+      "epoch 7\n",
+      "epoch 8\n",
+      "epoch 9\n",
+      "epoch 10\n",
+      "epoch 11\n",
+      "epoch 12\n",
+      "epoch 13\n",
+      "epoch 14\n",
+      "epoch 15\n"
      ]
     }
    ],
