--- a/project_2_recommender_and_evaluation.ipynb
+++ b/project_2_recommender_and_evaluation.ipynb
@@ -34,6 +34,9 @@
     "import torch.optim as optim\n",
     "from livelossplot import PlotLosses\n",
     "\n",
+    "from evaluation_and_testing.evaluation_measures import *\n",
+    "from evaluation_and_testing.testing import *\n",
+    "\n",
     "# Fix the dying kernel problem (only a problem in some installations - you can remove it, if it works without it)\n",
     "import os\n",
     "os.environ['KMP_DUPLICATE_LIB_OK'] = 'True'\n",
@@ -294,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 3,
    "id": "variable-jaguar",
    "metadata": {},
    "outputs": [
@@ -302,11 +305,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      user_id  item_id        term length_of_stay_bucket rate_plan  \\\n",
-      "9632     9790      342  HighSeason                 [0-1]  Standard   \n",
-      "\n",
-      "     room_segment n_people_bucket weekend_stay  \n",
-      "9632    [160-260]           [2-2]         True  \n",
       "   user_id  user_term_WinterVacation  user_term_Easter  user_term_OffSeason  \\\n",
       "6        7                       0.0               0.0             0.166667   \n",
       "\n",
@@ -469,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 24,
    "id": "unlike-recipient",
    "metadata": {},
    "outputs": [],
@@ -482,6 +480,20 @@
     "        super(Net, self).__init__()\n",
     "        self.seed = torch.manual_seed(seed)\n",
     "        self.embedding = nn.Embedding(n_items, item_size)\n",
+    "#         self.fc1 = nn.Linear(2 * n_items, int(n_items/2), bias=False)\n",
+    "#         self.fc2 = nn.Linear(int(n_items/2), int(int(n_items / 2)/2), bias=True)\n",
+    "#         self.fc3 = nn.Linear(int(int(n_items / 2)/2), 1, bias=True)\n",
+    "\n",
+    "#     def forward(self, x):\n",
+    "#         user = x[0]\n",
+    "#         item = x[1]\n",
+    "# #         user_embedding = self.embedding(user)\n",
+    "# #         item_embedding = self.embedding(item)\n",
+    "#         x = torch.relu(self.fc1(x))\n",
+    "#         x = torch.relu(self.fc2(x))\n",
+    "#         x = torch.sigmoid(self.fc3(x))\n",
+    "\n",
+    "#         return x\n",
     "\n",
     "    def forward(self, x):\n",
     "        user = x[0]\n",
@@ -502,7 +514,7 @@
     "    Linear recommender class based on user and item features.\n",
     "    \"\"\"\n",
     "    \n",
-    "    def __init__(self, seed=6789, n_neg_per_pos=3, lr=0.01, epochs= 200,validation_set_size=0.3  ):\n",
+    "    def __init__(self, seed=6789, n_neg_per_pos=3, lr=0.01, epochs=20, should_recommend_already_bought=False):\n",
     "        \"\"\"\n",
     "        Initialize recommender params and variables.\n",
     "        \"\"\"\n",
@@ -521,8 +533,16 @@
     "        self.most_popular_items = None\n",
     "        self.n_epochs = epochs\n",
     "        self.lr = lr\n",
-    "        self.validation_set_size = validation_set_size\n",
-    "    \n",
+    "        self.interactions = None\n",
+    "        self.item_id_mapping = None\n",
+    "        self.item_id_reverse_mapping = None\n",
+    "        self.user_id_mapping = None\n",
+    "        self.user_id_reverse_mapping = None\n",
+    "        self.recommender_df = pd.DataFrame(columns=['user_id', 'item_id', 'score'])\n",
+    "        self.device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "        self.should_recommend_already_bought = should_recommend_already_bought\n",
+    "\n",
+    "        \n",
     "    def fit(self, interactions_df, users_df, items_df):\n",
     "        \"\"\"\n",
     "        Training of the recommender.\n",
@@ -533,7 +553,16 @@
     "        :param pd.DataFrame items_df: DataFrame with items and their features defined by item_id and the item feature columns.\n",
     "        \"\"\"\n",
     "        \n",
+    "        unique_item_ids = interactions_df['item_id'].unique()\n",
+    "        self.item_id_mapping = dict(zip(unique_item_ids, list(range(len(unique_item_ids)))))\n",
+    "        self.item_id_reverse_mapping = dict(zip(list(range(len(unique_item_ids))), unique_item_ids))\n",
+    "        unique_user_ids = interactions_df['user_id'].unique()\n",
+    "        self.user_id_mapping = dict(zip(unique_user_ids, list(range(len(unique_user_ids)))))\n",
+    "        self.user_id_reverse_mapping = dict(zip(list(range(len(unique_user_ids))), unique_user_ids))\n",
+    "        \n",
+    "        \n",
     "        interactions_df = interactions_df.copy()\n",
+    "        self.interactions = interactions_df\n",
     "        n_users = np.max(interactions_df['user_id']) + 1\n",
     "        n_items = np.max(interactions_df['item_id']) + 1\n",
     "        \n",
@@ -590,11 +619,9 @@
     "        i_data = items_df.loc[:, items_df.columns != \"item_id\"].to_numpy()\n",
     "        \n",
     "        interaction_ids = self.rng.permutation(len(interactions_df)).astype(int)\n",
-    "        train_validation_slice_idx = int(len(interactions_df) * (1 - self.validation_set_size))\n",
-    "        training_ids = interaction_ids[:train_validation_slice_idx]\n",
     "        \n",
     "#         self.model = Net(self.seed,len(interactions_df))\n",
-    "        self.model = Net(self.seed, len(training_ids), len(i_data[0]))\n",
+    "        self.model = Net(self.seed, len(interaction_ids), len(i_data[0]))\n",
     "        \n",
     "        # Train the model using an optimizer\n",
     "        \n",
@@ -615,7 +642,7 @@
     "            \n",
     " \n",
     "            \n",
-    "            for i in training_ids:\n",
+    "            for i in interaction_ids:\n",
     "                idx = int(i)\n",
     "                user_id = int(interactions_df.iloc[idx][0])\n",
     "                item_id = int(interactions_df.iloc[idx][1])\n",
@@ -629,11 +656,11 @@
     "#                 display(interactions_df.iloc[idx])\n",
     "#                 print(user_id)\n",
     "                if(len(u) == 0):\n",
-    "                    user_repr = torch.tensor(default_rng_array)\n",
+    "                    user_repr = torch.tensor(default_rng_array, requires_grad=True)\n",
     "                else:\n",
-    "                    user_repr = torch.tensor(u.loc[:,users_df.columns != \"user_id\"].astype(float).values[0])\n",
+    "                    user_repr = torch.tensor(u.loc[:,users_df.columns != \"user_id\"].astype(float).values[0], requires_grad=True)\n",
     "                \n",
-    "                item_repr = torch.tensor(it.loc[:, items_df.columns != \"item_id\"].astype(float).values[0])\n",
+    "                item_repr = torch.tensor(it.loc[:, items_df.columns != \"item_id\"].astype(float).values[0], requires_grad=True)\n",
     "                \n",
     "#                 print(\"{}  {}\".format(user_id, item_id))\n",
     "#                 print(user_repr)\n",
@@ -682,41 +709,45 @@
     "        items_df, item_features = prepare_items_df(items_df)\n",
     "        items_df = items_df.loc[:, ['item_id'] + item_features]\n",
     "        \n",
-    "        # Score the items\n",
-    "    \n",
-    "        recommendations = pd.DataFrame(columns=['user_id', 'item_id', 'score'])\n",
+    "        items_df = items_df.copy()\n",
+    "        items_df = items_df.loc[items_df['item_id'].isin(self.item_id_mapping)]\n",
+    "        items_df['item_id'] = items_df['item_id'].map(self.item_id_mapping)\n",
     "        \n",
-    "        for ix, user in users_df.iterrows():\n",
-    "            \n",
-    "            # Calculate the score for the user and every item in items_df\n",
-    "            # <<<Write your code here>>>\n",
-    "            \n",
-    "            scores = []\n",
+    "        # Score the items\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        for idx, user in users_df.iterrows():\n",
+    "            recommendations = []\n",
     "\n",
     "            user_id = user['user_id']\n",
     "\n",
-    "            if user_id in self.users_df:\n",
-    "\n",
+    "            if user_id in self.user_id_mapping:\n",
+    "                \n",
+    "                mapped_user_id = self.user_id_mapping[user_id]\n",
+    "                \n",
     "                ids_list = items_df['item_id'].tolist()\n",
     "                id_to_pos = np.array([0]*len(ids_list))\n",
     "                for k in range(len(ids_list)):\n",
     "                    id_to_pos[ids_list[k]] = k\n",
-    "                scores = np.matmul(self.user_repr[mapped_user_id].reshape(1, -1),\n",
-    "                                   self.item_repr[ids_list].T).flatten()\n",
-    "\n",
+    "                \n",
+    "                net_input = torch.tensor(list(zip([mapped_user_id]*len(ids_list), ids_list))).to(self.device)\n",
+    "                \n",
+    "                scores = self.model(net_input).flatten().detach().cpu().numpy()\n",
+    "                \n",
     "                # Choose n recommendations based on highest scores\n",
     "                if not self.should_recommend_already_bought:\n",
-    "                    x_list = self.interactions_df.loc[\n",
-    "                        self.interactions_df['user_id'] == mapped_user_id]['item_id'].tolist()\n",
-    "                    scores[id_to_pos[x_list]] = -1e100\n",
+    "                    x_list = self.interactions.loc[\n",
+    "                        self.interactions['user_id'] == mapped_user_id]['item_id'].tolist()\n",
+    "                    scores[id_to_pos[x_list]] = -np.inf\n",
     "\n",
     "                chosen_pos = np.argsort(-scores)[:n_recommendations]\n",
     "\n",
     "                for item_pos in chosen_pos:\n",
     "                    recommendations.append(\n",
     "                        {\n",
-    "                            'user_id': user_id,\n",
-    "                            'item_id': id_list[item_pos],\n",
+    "                            'user_id': self.user_id_reverse_mapping[mapped_user_id],\n",
+    "                            'item_id': self.item_id_reverse_mapping[ids_list[item_pos]],\n",
     "                            'score': scores[item_pos]\n",
     "                        }\n",
     "                    )\n",
@@ -725,27 +756,16 @@
     "                    recommendations.append(\n",
     "                        {\n",
     "                            'user_id': user['user_id'],\n",
-    "                            'item_id': self.most_popular_items[i],\n",
+    "                            'item_id': self.item_id_reverse_mapping[self.most_popular_items[i]],\n",
     "                            'score': 1.0\n",
     "                        }\n",
     "                    )\n",
-    "            \n",
-    "            chosen_ids = np.argsort(-scores)[:n_recommendations]\n",
-    "            \n",
-    "            recommendations = []\n",
-    "            for item_id in chosen_ids:\n",
-    "                recommendations.append(\n",
-    "                    {\n",
-    "                        'user_id': user['user_id'],\n",
-    "                        'item_id': item_id,\n",
-    "                        'score': scores[item_id]\n",
-    "                    }\n",
-    "                )\n",
-    "            \n",
+    "\n",
     "            user_recommendations = pd.DataFrame(recommendations)\n",
+    "            print(user_recommendations)\n",
     "\n",
     "            self.recommender_df = pd.concat([self.recommender_df, user_recommendations])\n",
-    "\n",
+    "            print(self.recommender_df)\n",
     "        return self.recommender_df"
    ]
   },
@@ -759,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 25,
    "id": "greatest-canon",
    "metadata": {},
    "outputs": [],
@@ -779,18 +799,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      user_id  item_id        term length_of_stay_bucket rate_plan  \\\n",
-      "9632     9790      342  HighSeason                 [0-1]  Standard   \n",
-      "\n",
-      "     room_segment n_people_bucket weekend_stay  \n",
-      "9632    [160-260]           [2-2]         True  \n",
-      "epoch 0\n"
+      "epoch 0\n",
+      "epoch 1\n"
      ]
     }
    ],
    "source": [
     "# Fit method\n",
-    "nn_recommender = NNRecommender()\n",
+    "nn_recommender = NNRecommender(epochs=2)\n",
     "nn_recommender.fit(interactions_df, None, None)"
    ]
   },
@@ -805,10 +821,11 @@
    "source": [
     "# Recommender method\n",
     "\n",
-    "recommendations = nn_recommender.recommend(pd.DataFrame([[1], [2], [3], [4], [5]], columns=['user_id']), items_df, 10)\n",
+    "recommendations = nn_recommender.recommend(pd.DataFrame([[1], [2], [3], [4], [50000]], columns=['user_id']), items_df, 10)\n",
     "\n",
     "recommendations = pd.merge(recommendations, items_df, on='item_id', how='left')\n",
-    "display(HTML(recommendations.to_html()))"
+    "display(HTML(recommendations.to_html()))\n",
+    "print(nn_recommender.most_popular_items)"
    ]
   },
   {
