--- a/project_2_recommender_and_evaluation.ipynb
+++ b/project_2_recommender_and_evaluation.ipynb
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "id": "unlike-recipient",
    "metadata": {},
    "outputs": [],
@@ -685,7 +685,7 @@
     "        last_training_total_loss = 0.0\n",
     "        last_validation_total_loss = 0.0\n",
     "        for epoch in range(self.n_epochs):\n",
-    "#             print(\"Epoch \" + str(epoch))\n",
+    "#             print(\"Epoch \" + str(epoch), end=\"\\r\")\n",
     "            # Train\n",
     "            \n",
     "            training_losses.clear()\n",
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "greatest-canon",
    "metadata": {},
    "outputs": [],
@@ -837,10 +837,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "id": "initial-capital",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 2\r"
+     ]
+    }
+   ],
    "source": [
     "# Fit method\n",
     "nn_recommender = NNRecommender(n_neg_per_pos=10, batch_size=16,embedding_dim=6, lr=0.001,  epochs=3)\n",
@@ -1621,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "strange-alaska",
    "metadata": {},
    "outputs": [],
@@ -1633,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "stable-theta",
    "metadata": {},
    "outputs": [],
@@ -1716,8 +1724,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  0%|                                                                                                              | 0/30 [00:00<?, ?trial/s, best loss=?]"
+      " 30%|████████████████████████▎                                                        | 9/30 [27:59<58:34, 167.36s/trial, best loss: -0.04739737621667372]"
      ]
     }
    ],
