--- a/project_2_recommender_and_evaluation.ipynb
+++ b/project_2_recommender_and_evaluation.ipynb
@@ -1724,7 +1724,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 30%|████████████████████████▎                                                        | 9/30 [27:59<58:34, 167.36s/trial, best loss: -0.04739737621667372]"
+      " 43%|██████████████████████████████████▋                                             | 13/30 [41:58<55:37, 196.32s/trial, best loss: -0.04739737621667372]"
      ]
     }
    ],
@@ -1949,7 +1949,22 @@
    "id": "declared-howard",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "The worst part of this project was my failed attempt at creating neural network with content based elements. \n",
+    "I lost a lot of time and in the end I decided to hang up on this idea since the algorithm in my head proved to be invalid and repairing and implementing it was - in my opinion -not worth the time.\n",
+    "The idea was that I would train my network based on user interactions multiplying user representation with item representation.\n",
+    "Then summing up and applying sigmoid function we would receive higer scores on items that are more to user&lsquo;s liking since \n",
+    "user had 0&lsquo;s in features he haven&lsquo;t interacted with. Then I&lsquo;d subtract that score from 1 to get loss. \n",
+    "There were a bunch of logic flaws and the fact that the idea isn&lsquo;t really siuted for neural network training\n",
+    "\n",
+    "After implementing proper neural network algorithms everything went better and I was able to proceeed to the tuning however here,\n",
+    "again I couldn&lsquo;t receive any satisfying scores despite testing diffrent variables and variables spaces in hyperopt, as well as\n",
+    "diffrent combinations of used algorithms.\n",
+    "\n",
+    "In the end I didn&lsquo;t have much time left for tuning and evaluation so I was only able to try out so much combinations.\n",
+    "\n",
+    "I assume that my recommender could be vastly improved using other advanced NN models or optimizing algorithms."
+   ]
   }
  ],
  "metadata": {
