--- a/project_2_recommender_and_evaluation.ipynb
+++ b/project_2_recommender_and_evaluation.ipynb
@@ -1716,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "obvious-astrology",
    "metadata": {},
    "outputs": [
@@ -1724,7 +1724,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 43%|██████████████████████████████████▋                                             | 13/30 [41:58<55:37, 196.32s/trial, best loss: -0.04739737621667372]"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 30/30 [1:39:48<00:00, 199.63s/trial, best loss: -0.04739737621667372]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Recommender</th>\n",
+       "      <th>HR@1</th>\n",
+       "      <th>HR@3</th>\n",
+       "      <th>HR@5</th>\n",
+       "      <th>HR@10</th>\n",
+       "      <th>NDCG@1</th>\n",
+       "      <th>NDCG@3</th>\n",
+       "      <th>NDCG@5</th>\n",
+       "      <th>NDCG@10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NNRecommender</td>\n",
+       "      <td>0.005771</td>\n",
+       "      <td>0.009844</td>\n",
+       "      <td>0.053293</td>\n",
+       "      <td>0.073999</td>\n",
+       "      <td>0.005771</td>\n",
+       "      <td>0.008118</td>\n",
+       "      <td>0.026444</td>\n",
+       "      <td>0.033262</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters:\n",
+      "{'batch_size': 26.0, 'embedding_dim': 19.0, 'epochs': 10.0, 'n_neg_per_pos': 7.0}\n"
      ]
     }
    ],
@@ -1738,7 +1787,7 @@
     "}\n",
     "\n",
     "best_param_set = tune_recommender(NNRecommender, interactions_df, items_df,\n",
-    "                                  param_space, max_evals=30, show_progressbar=True, seed=seed)\n",
+    "                                  param_space, max_evals=10, show_progressbar=True, seed=seed)\n",
     "\n",
     "print(\"Best parameters:\")\n",
     "print(best_param_set)"
@@ -1764,7 +1813,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nn_recommender = NNRecommender(n_neg_per_pos=1)  # Initialize your recommender here\n",
+    "# nn_recommender = NNRecommender(n_neg_per_pos=1)  # Initialize your recommender here\n",
+    "nn_recommender = NNRecommender(n_neg_per_pos=7, batch_size=26, embedding_dim=19, epochs=15)  # Initialize your recommender here\n",
     "\n",
     "# Give the name of your recommender in the line below\n",
     "nn_tts_results = [['NNRecommender'] + list(evaluate_train_test_split_implicit(\n",
@@ -1923,10 +1973,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "moderate-printing",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Recommender</th>\n",
+       "      <th>HR@1</th>\n",
+       "      <th>HR@3</th>\n",
+       "      <th>HR@5</th>\n",
+       "      <th>HR@10</th>\n",
+       "      <th>NDCG@1</th>\n",
+       "      <th>NDCG@3</th>\n",
+       "      <th>NDCG@5</th>\n",
+       "      <th>NDCG@10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NNRecommender</td>\n",
+       "      <td>0.005431</td>\n",
+       "      <td>0.008147</td>\n",
+       "      <td>0.050916</td>\n",
+       "      <td>0.072641</td>\n",
+       "      <td>0.005431</td>\n",
+       "      <td>0.007011</td>\n",
+       "      <td>0.025074</td>\n",
+       "      <td>0.031970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AmazonRecommender</td>\n",
+       "      <td>0.044128</td>\n",
+       "      <td>0.118805</td>\n",
+       "      <td>0.160557</td>\n",
+       "      <td>0.223693</td>\n",
+       "      <td>0.044128</td>\n",
+       "      <td>0.086755</td>\n",
+       "      <td>0.104216</td>\n",
+       "      <td>0.124468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NetflixRecommender</td>\n",
+       "      <td>0.044128</td>\n",
+       "      <td>0.119823</td>\n",
+       "      <td>0.162933</td>\n",
+       "      <td>0.225051</td>\n",
+       "      <td>0.044128</td>\n",
+       "      <td>0.087353</td>\n",
+       "      <td>0.105369</td>\n",
+       "      <td>0.125184</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "tts_results = pd.concat([nn_tts_results, amazon_tts_results, netflix_tts_results]).reset_index(drop=True)\n",
     "display(HTML(tts_results.to_html()))"
@@ -1944,13 +2060,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "declared-howard",
+   "cell_type": "markdown",
+   "id": "d3ebf64c",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "The worst part of this project was my failed attempt at creating neural network with content based elements. \n",
+    "<span>The worst part of this project was my failed attempt at creating neural network with content based elements. \n",
     "I lost a lot of time and in the end I decided to hang up on this idea since the algorithm in my head proved to be invalid and repairing and implementing it was - in my opinion -not worth the time.\n",
     "The idea was that I would train my network based on user interactions multiplying user representation with item representation.\n",
     "Then summing up and applying sigmoid function we would receive higer scores on items that are more to user&lsquo;s liking since \n",
@@ -1963,7 +2077,9 @@
     "\n",
     "In the end I didn&lsquo;t have much time left for tuning and evaluation so I was only able to try out so much combinations.\n",
     "\n",
-    "I assume that my recommender could be vastly improved using other advanced NN models or optimizing algorithms."
+    "I assume that my recommender could be vastly improved using other advanced NN models or optimizing algorithms.\n",
+    "\n",
+    "The good takeaway from the project is somewhat better understanding of neural networks in general after implementing it myself.</span>"
    ]
   }
  ],
