--- a/project_2_recommender_and_evaluation.ipynb
+++ b/project_2_recommender_and_evaluation.ipynb
@@ -995,8 +995,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  0%|                                                                                                               | 0/5 [00:00<?, ?trial/s, best loss=?]"
+      " 40%|█████████████████████████████████▏                                                 | 2/5 [01:50<02:31, 50.56s/trial, best loss: -0.20694033008887008]"
      ]
     }
    ],
@@ -1331,7 +1330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae4b5429",
+   "id": "b190cc7e",
    "metadata": {},
    "source": [
     "<span>The worst part of this project was my failed attempt at creating neural network with content based elements. \n",
