--- a/project_2_recommender_and_evaluation.ipynb
+++ b/project_2_recommender_and_evaluation.ipynb
@@ -995,7 +995,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 40%|█████████████████████████████████▏                                                 | 2/5 [01:50<02:31, 50.56s/trial, best loss: -0.20694033008887008]"
+      " 23%|██████████████████▏                                                           | 70/300 [46:23<1:48:45, 28.37s/trial, best loss: -0.22894625476089717]"
      ]
     }
    ],
@@ -1007,14 +1007,14 @@
     "    'batch_size': hp.quniform('batch_size', 24, 128, 1),\n",
     "    'epochs': hp.quniform('epochs', 5, 20, 1),\n",
     "    'embedding_dim': hp.quniform('embedding_dim', 6, 30, 1),\n",
-    "    'lr': hp.quniform('lr', 0.000001, 0.001, 1),\n",
-    "    'weight_decay': hp.quniform('weight_decay', 0.000001, 0.001, 1),\n",
+    "    'lr': hp.choice('lr', [0.000001,0.00001,0.0001, 0.001]),\n",
+    "    'weight_decay': hp.choice('weight_decay', [0.000001,0.00001,0.0001, 0.001]),\n",
     "    'optimizer_type': hp.choice(\"optimizer_type\",[\"ADAM\",\"SGD\"]),\n",
     "    'net_type':hp.choice(\"net_type\",[\"MF\",\"GMF\", \"MLP\"])\n",
     "}\n",
     "\n",
     "best_param_set = tune_recommender(NNRecommender, interactions_df, items_df,\n",
-    "                                  param_space, max_evals=5, show_progressbar=True, seed=seed)\n",
+    "                                  param_space, max_evals=300, show_progressbar=True, seed=seed)\n",
     "\n",
     "print(\"Best parameters:\")\n",
     "print(best_param_set)"
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b190cc7e",
+   "id": "c693790b",
    "metadata": {},
    "source": [
     "<span>The worst part of this project was my failed attempt at creating neural network with content based elements. \n",
